archive 4 plus some south asian

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 washington-heights-dining-table/index.html
-weeksville-2024/i_need_no_myth_blackbk.png
-weeksville-2024/still_at_last_blackbk.png
-washington-heights-dining-table/index.html
+washington-heights-dining-table\south_asian_lit\1\index.html
